apps/base/media/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/part-of: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
        app.kubernetes.io/name: tautulli
        app.kubernetes.io/part-of: media-stack
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/part-of
                      operator: In
                      values:
                        - media-stack
                topologyKey: kubernetes.io/hostname
      nodeSelector:
        kubernetes.io/hostname: talos-cz9-9tb
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: tautulli
          image: lscr.io/linuxserver/tautulli:v2.16.0-ls202
          ports:
            - name: http
              containerPort: 8181
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tautulli-config
